feat: list, create and delete users in web interface
